--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-HF_HOME=/fs/nexus-scratch/mcding/.cache/huggingface/
-TORCH_HOME=/fs/nexus-scratch/mcding/.cache/torch/
+# Cache folders
+TORCH_HOME=/scratch0/mcding/.cache/torch/
+HF_HOME=/scratch0/mcding/.cache/huggingface/
