--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
+# Dataset and Model paths
+DATASET_DIR=/fs/nexus-scratch/mcding/Watermark-Experiments/datasets/
+MODEL_DIR=/fs/nexus-scratch/mcding/Watermark-Experiments/models/
 # Cache folders
 TORCH_HOME=/scratch0/mcding/.cache/torch/
 HF_HOME=/scratch0/mcding/.cache/huggingface/
+WANDB_DIR=/scratch0/mcding/.cache/wandb/
+# Wandb
+WANDB_LOG_MODEL=false
+WANDB_SILENT=true
