testing hf space upload, not finished

--- a/.env
+++ b/.env
@@ -8,3 +8,9 @@ WANDB_DIR=/scratch1/mcding/.cache/wandb/
 # Wandb
 WANDB_LOG_MODEL=false
 WANDB_SILENT=true
+# HF space
+LOGIN_PASSWORD=huangwm
+GIT_EMAIL=mcding@umd.edu
+RESULT_DIR=/fs/nexus-projects/HuangWM/datasets/decoded
+REPO_URL=git@github.com:umd-huang-lab/WMBench.git
+BRANCH_NAME=decoded
