--- a/.env
+++ b/.env
@@ -1,13 +1,8 @@
-# Dataset and Model paths
-DATASET_DIR=/fs/nexus-scratch/mcding/Watermark-Experiments/datasets/
-MODEL_DIR=/fs/nexus-scratch/mcding/Watermark-Experiments/models/
+# Dataset folders
+DATASET_DIR=/fs/nexus-projects/HuangWM/datasets
 # Cache folders
-TORCH_HOME=/scratch1/mcding/.cache/torch/
-HF_HOME=/scratch1/mcding/.cache/huggingface/
-WANDB_DIR=/scratch1/mcding/.cache/wandb/
-# Wandb
-WANDB_LOG_MODEL=false
-WANDB_SILENT=true
+TORCH_HOME=/scratch0/mcding/.cache/torch/
+HF_HOME=/scratch0/mcding/.cache/huggingface/
 # HF space
 RESULT_DIR=/fs/nexus-projects/HuangWM/datasets/decoded
 LOGIN_PASSWORD=huangwm
