--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Dataset folders
-DATASET_DIR=/fs/nexus-projects/HuangWM/datasets
+DATA_DIR=/fs/nexus-projects/HuangWM/datasets
 # Cache folders
-TORCH_HOME=/scratch0/mcding/.cache/torch/
-HF_HOME=/scratch0/mcding/.cache/huggingface/
+TORCH_HOME=/tmp/mcding/.cache/torch/
+HF_HOME=/tmp/mcding/.cache/huggingface/
 # HF space
 RESULT_DIR=/fs/nexus-projects/HuangWM/datasets/decoded
 LOGIN_PASSWORD=huangwm
