--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,7 @@ scikit_learn>=1.3.2
 scipy>=1.11.3
 scikit-image>=0.0
 transformers>=4.35.0
+orjson==3.9.10
 huggingface-hub>=0.17.3
 tqdm>=4.66.1
+python-dotenv==1.0.0
