--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
-# Dataset folders
+# CML folders
 DATA_DIR=/fs/nexus-projects/HuangWM/datasets
+MODEL_DIR=/fs/nexus-projects/HuangWM/datasets/models
 # Cache folders
 TORCH_HOME=/tmp/mcding/.cache/torch/
 HF_HOME=/tmp/mcding/.cache/huggingface/
 # HF space
-RESULT_DIR=/fs/nexus-projects/HuangWM/datasets/decoded
+#RESULT_DIR=/fs/nexus-projects/HuangWM/datasets/decoded
+RESULT_DIR=/scratch1/mcding/Watermark-Experiments/datasets
 LOGIN_PASSWORD=huangwm
 REPO_URL=git@github.com:umd-huang-lab/WMBench.git
 BRANCH_NAME=decoded
+# Others
+LD_LIBRARY_PATH=/opt/common/cuda/cuda-11.8.0/lib64:/opt/common/cudnn/cudnn-11.x-8.8.0.121/lib64:${LD_LIBRARY_PATH}
