--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -23,6 +23,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 clip @ git+https://github.com/openai/CLIP.git@a1d071733d7111c9c014f024669f959182114e33
 colorama==0.4.6
+coloredlogs==15.0.1
 comm==0.2.0
 contourpy==1.2.0
 cycler==0.12.1
@@ -39,6 +40,7 @@ fastapi==0.104.1
 fastjsonschema==2.18.1
 ffmpy==0.3.1
 filelock==3.9.0
+flatbuffers==23.5.26
 fonttools==4.44.0
 fqdn==1.5.1
 frozenlist==1.4.0
@@ -53,6 +55,7 @@ hjson==3.1.0
 httpcore==1.0.2
 httpx==0.25.1
 huggingface-hub==0.17.3
+humanfriendly==10.0
 idna==2.10
 imageio==2.32.0
 importlib-metadata==6.8.0
@@ -100,6 +103,7 @@ ninja==1.11.1.1
 notebook==7.0.6
 notebook_shim==0.2.3
 numpy==1.24.1
+onnxruntime-gpu==1.16.2
 open-clip-torch==2.23.0
 opencv-python==4.8.1.78
 orjson==3.9.10
@@ -190,7 +194,7 @@ webencodings==0.5.1
 websocket-client==1.6.4
 websockets==11.0.3
 widgetsnbextension==4.0.9
--e git+ssh://git@github.com/johnding1996/Watermark-Experiments.git@68ab622adaef28f8d1199e14b705ddb0dcb6ff69#egg=wmbench
+-e git+ssh://git@github.com/johnding1996/Watermark-Experiments.git@99fc77b94b2dd26820d540bee0d03a8e1a3391c0#egg=wmbench
 xformers==0.0.22.post7+cu118
 xxhash==3.4.1
 yarl==1.9.2
