--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ scikit_learn>=1.3.2
 scipy>=1.11.3
 scikit-image>=0.0
 transformers>=4.35.0
+onnx==1.15.0
 onnxruntime-gpu>=1.16.2
 orjson>=3.9.10
 huggingface-hub>=0.17.3
