--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -48,7 +48,7 @@ fsspec==2023.4.0
 ftfy==6.1.1
 gitdb==4.0.11
 GitPython==3.1.40
-gradio==4.2.0
+gradio==4.3.0
 gradio_client==0.7.0
 h11==0.14.0
 hjson==3.1.0
@@ -103,6 +103,7 @@ ninja==1.11.1.1
 notebook==7.0.6
 notebook_shim==0.2.3
 numpy==1.24.1
+onnx==1.15.0
 onnxruntime-gpu==1.16.2
 open-clip-torch==2.23.0
 opencv-python==4.8.1.78
@@ -194,7 +195,7 @@ webencodings==0.5.1
 websocket-client==1.6.4
 websockets==11.0.3
 widgetsnbextension==4.0.9
--e git+ssh://git@github.com/johnding1996/Watermark-Experiments.git@c0e7bb94123eade85450e7d4f8bab2a4bc0b3de1#egg=wmbench
+-e git+ssh://git@github.com/johnding1996/Watermark-Experiments.git@e483e0bcbcb7080df6924fe420032a3c8aeb8376#egg=wmbench
 xformers==0.0.22.post7+cu118
 xxhash==3.4.1
 yarl==1.9.2
