--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 DATA_DIR=/fs/nexus-projects/HuangWM/datasets
 MODEL_DIR=/fs/nexus-projects/HuangWM/datasets/models
 # Cache folders
-# TORCH_HOME=/tmp/mcding/.cache/torch/
-# HF_HOME=/tmp/mcding/.cache/huggingface/
+TORCH_HOME=/tmp/mcding/.cache/torch/
+HF_HOME=/tmp/mcding/.cache/huggingface/
 # HF space
 #RESULT_DIR=/scratch1/mcding/Watermark-Experiments/datasets
 RESULT_DIR=/fs/nexus-projects/HuangWM/datasets/decoded
