--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -27,24 +27,24 @@ coloredlogs==15.0.1
 comm==0.2.0
 contourpy==1.2.0
 cycler==0.12.1
-datasets==2.14.6
+datasets==2.15.0
 debugpy==1.8.0
 decorator==5.1.1
-deepspeed==0.12.2
+deepspeed==0.12.3
 defusedxml==0.7.1
-diffusers==0.23.0
+diffusers==0.23.1
 dill==0.3.7
 exceptiongroup==1.1.3
 executing==2.0.1
 fastapi==0.104.1
-fastjsonschema==2.18.1
+fastjsonschema==2.19.0
 ffmpy==0.3.1
 filelock==3.9.0
 flatbuffers==23.5.26
-fonttools==4.44.0
+fonttools==4.44.3
 fqdn==1.5.1
 frozenlist==1.4.0
-fsspec==2023.4.0
+fsspec==2023.10.0
 ftfy==6.1.1
 gitdb==4.0.11
 GitPython==3.1.40
@@ -54,7 +54,7 @@ h11==0.14.0
 hjson==3.1.0
 httpcore==1.0.2
 httpx==0.25.1
-huggingface-hub==0.17.3
+huggingface-hub==0.19.3
 humanfriendly==10.0
 idna==2.10
 imageio==2.32.0
@@ -70,14 +70,14 @@ joblib==1.3.2
 json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.19.2
-jsonschema-specifications==2023.7.1
+jsonschema-specifications==2023.11.1
 jupyter==1.0.0
 jupyter-console==6.6.3
 jupyter-events==0.9.0
 jupyter-lsp==2.2.0
 jupyter_client==8.6.0
 jupyter_core==5.5.0
-jupyter_server==2.10.0
+jupyter_server==2.10.1
 jupyter_server_terminals==0.4.4
 jupyterlab==4.0.8
 jupyterlab-pygments==0.2.2
@@ -85,6 +85,7 @@ jupyterlab-widgets==3.0.9
 jupyterlab_server==2.25.1
 kiwisolver==1.4.5
 lazy_loader==0.3
+lightning-utilities==0.9.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.1
@@ -103,6 +104,18 @@ ninja==1.11.1.1
 notebook==7.0.6
 notebook_shim==0.2.3
 numpy==1.24.1
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
 onnx==1.15.0
 onnxruntime-gpu==1.16.2
 open-clip-torch==2.23.0
@@ -118,17 +131,18 @@ pickleshare==0.7.5
 Pillow==9.3.0
 platformdirs==4.0.0
 prometheus-client==0.18.0
-prompt-toolkit==3.0.40
-protobuf==4.25.0
+prompt-toolkit==3.0.41
+protobuf==4.25.1
 psutil==5.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py-cpuinfo==9.0.0
 pyarrow==14.0.1
+pyarrow-hotfix==0.5
 pycocotools==2.0.7
 pycparser==2.21
-pydantic==2.4.2
-pydantic_core==2.10.1
+pydantic==2.5.1
+pydantic_core==2.14.3
 pydub==0.25.1
 Pygments==2.16.1
 pynvml==11.5.0
@@ -140,15 +154,15 @@ python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==25.1.1
-qtconsole==5.5.0
+qtconsole==5.5.1
 QtPy==2.4.1
-referencing==0.30.2
+referencing==0.31.0
 regex==2023.10.3
 requests==2.25.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rich==13.6.0
-rpds-py==0.12.0
+rich==13.7.0
+rpds-py==0.13.0
 safetensors==0.4.0
 scikit-image==0.22.0
 scikit-learn==1.3.2
@@ -169,18 +183,19 @@ threadpoolctl==3.2.0
 tifffile==2023.9.26
 timm==0.9.10
 tinycss2==1.2.1
-tokenizers==0.14.1
+tokenizers==0.15.0
 tomli==2.0.1
 tomlkit==0.12.0
 toolz==0.12.0
-torch==2.1.0+cu118
+torch==2.1.1+cu118
 torchattacks==3.5.1
-torchaudio==2.1.0+cu118
-torchvision==0.16.0+cu118
+torchaudio==2.1.1+cu118
+torchmetrics==1.2.0
+torchvision==0.16.1+cu118
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.13.0
-transformers==4.35.0
+transformers==4.35.2
 triton==2.1.0
 typer==0.9.0
 types-python-dateutil==2.8.19.14
@@ -189,13 +204,13 @@ tzdata==2023.3
 uri-template==1.3.0
 urllib3==1.26.18
 uvicorn==0.24.0.post1
-wcwidth==0.2.9
+wcwidth==0.2.10
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.4
 websockets==11.0.3
 widgetsnbextension==4.0.9
--e git+ssh://git@github.com/johnding1996/Watermark-Experiments.git@e483e0bcbcb7080df6924fe420032a3c8aeb8376#egg=wmbench
+-e git+ssh://git@github.com/johnding1996/Watermark-Experiments.git@24818f58fe257dbe8bd367c378b8d5fead298bb0#egg=wmbench
 xformers==0.0.22.post7+cu118
 xxhash==3.4.1
 yarl==1.9.2
