hfspace draw fix

--- a/.env
+++ b/.env
@@ -8,5 +8,6 @@ HF_HOME=/tmp/huangwm/.cache/huggingface/
 RESULT_DIR=/fs/nexus-projects/HuangWM/datasets/decoded
 REPO_URL=git@github.com:umd-huang-lab/WMBench.git
 BRANCH_NAME=decoded
+CACHE_DIR=/tmp/huangwm/.cache/space/
 # CUDA and CUDNN paths for ONNX
 LD_LIBRARY_PATH=/opt/common/cuda/cuda-11.8.0/lib64:/opt/common/cudnn/cudnn-11.x-8.8.0.121/lib64:${LD_LIBRARY_PATH}
