--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -54,7 +54,7 @@ h11==0.14.0
 hjson==3.1.0
 httpcore==1.0.2
 httpx==0.25.1
-huggingface-hub==0.19.3
+huggingface-hub==0.19.4
 humanfriendly==10.0
 idna==2.10
 imageio==2.32.0
@@ -69,7 +69,7 @@ Jinja2==3.1.2
 joblib==1.3.2
 json5==0.9.14
 jsonpointer==2.4
-jsonschema==4.19.2
+jsonschema==4.20.0
 jsonschema-specifications==2023.11.1
 jupyter==1.0.0
 jupyter-console==6.6.3
@@ -126,10 +126,13 @@ packaging==23.2
 pandas==2.1.3
 pandocfilters==1.5.0
 parso==0.8.3
+patsy==0.5.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.3.0
 platformdirs==4.0.0
+plotly==5.18.0
+plotly-express==0.4.1
 prometheus-client==0.18.0
 prompt-toolkit==3.0.41
 protobuf==4.25.1
@@ -177,7 +180,9 @@ sniffio==1.3.0
 soupsieve==2.5
 stack-data==0.6.3
 starlette==0.27.0
+statsmodels==0.14.0
 sympy==1.12
+tenacity==8.2.3
 terminado==0.18.0
 threadpoolctl==3.2.0
 tifffile==2023.9.26
@@ -187,7 +192,7 @@ tokenizers==0.15.0
 tomli==2.0.1
 tomlkit==0.12.0
 toolz==0.12.0
-torch==2.1.1+cu118
+torch==2.1.1
 torchattacks==3.5.1
 torchaudio==2.1.1+cu118
 torchmetrics==1.2.0
@@ -210,7 +215,7 @@ webencodings==0.5.1
 websocket-client==1.6.4
 websockets==11.0.3
 widgetsnbextension==4.0.9
--e git+ssh://git@github.com/johnding1996/Watermark-Experiments.git@a525bf32380f0afcbdc570e94e0372af26dc824a#egg=wmbench
+-e git+ssh://git@github.com/johnding1996/Watermark-Experiments.git@4d267d994ac2893b9e5973c139df5a1733139ff5#egg=wmbench
 xformers==0.0.22.post7+cu118
 xxhash==3.4.1
 yarl==1.9.2
