--- a/requirements_cli.txt
+++ b/requirements_cli.txt
@@ -18,4 +18,6 @@ clip @ git+https://github.com/openai/CLIP.git@a1d071733d7111c9c014f024669f959182
 orjson>=3.9.10
 huggingface-hub>=0.17.3
 tqdm>=4.66.1
+plotly>=5.18.0
+plotly-express>=0.4.1
 python-dotenv==1.0.0
